# backend/app/schemas/git_connectors.py
@@ -3,6 +3,14 @@ from datetime import datetime
 from pydantic import BaseModel
 
 
+class GitRepositorySchema(BaseModel):
+    id: str
+    owner: str
+    repo: str
+    url: str
+    private: bool
+
+
 class GitHubAppSchema(BaseModel):
     id: str
     name: str
@@ -10,6 +18,7 @@ class GitHubAppSchema(BaseModel):
     app_id: int
     installation_id: int | None
     is_installed: bool
+    repositories: list[GitRepositorySchema]
 
     @classmethod
     def from_github_app(cls, gh) -> "GitHubAppSchema":
@@ -20,6 +29,16 @@ class GitHubAppSchema(BaseModel):
             app_id=gh.app_id,
             installation_id=gh.installation_id,
             is_installed=gh.is_installed,
+            repositories=[
+                GitRepositorySchema(
+                    id=r.id,
+                    owner=r.owner,
+                    repo=r.repo,
+                    url=r.url,
+                    private=r.private,
+                )
+                for r in gh.repositories
+            ],
         )
 
 
